# coxeter-viz

./: .gitignore  CLAUDE.md  CONSUMER.md  LICENSE  Makefile  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
demos/cosets/: main.ts
demos/figure/: main.ts
demos/group/: main.ts
demos/hello/: main.ts
demos/render2d/: main.ts
demos/shared/: canvas.ts  index.ts  page.ts
demos/sphereview/: main.ts
demos/tilings/: main.ts
demos/tilingshader/: main.ts
demos/uniform/: main.ts
demos/wordfile/: example-words.json  main.ts
demos/wordlists/: main.ts
docs/: DESIGN-original.md  PLAN.md  plan-group-explorer.md
examples/: README.md  two_sets_html.py  wordset_to_png.py
python/: README.md  pyproject.toml
python/examples/: highlighted_tiling.py
python/src/coxeter_groups/: __init__.py  _export.py  _html.py  figure.py
python/src/coxeter_groups/_static/: viewer.js
python/src/coxeter_viz/: __init__.py  _export.py  _html.py  figure.py
python/src/coxeter_viz/_static/: viewer.js
python/tests/: test_export.py  test_figure.py  test_html.py  test_pixel.py
renderer/: package.json
renderer/scripts/: build-bundle.mjs
renderer/tests/: app.test.ts  coxeter.test.ts  group.test.ts  inputs.test.ts  kit.test.ts  layering.test.ts  linear.test.ts  (+5 more)
scripts/: build-bundle.mjs  make-samples.mjs  run-demo.mjs
tests/: app.test.ts  coxeter.test.ts  geometry.test.ts  golden.test.ts  group.test.ts  helpers.ts  html.test.ts  math.test.ts  measure.test.ts  models.test.ts  polytope.test.ts  reflections.test.ts  render2d.test.ts  schema.test.ts  shared.test.ts  smoke.test.ts  sphereview.test.ts  test_bag.py  test_element.py  test_enumerate.py  test_export.py  test_figure.py  test_html.py  test_pixel.py  test_rep.py  test_wordset.py  tilingshader.test.ts  wythoff.test.ts
(+145 files in other folders)
