[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coxeter-groups"
version = "0.1.0"
description = "Pictures of Coxeter groups from abstract group data — tessellations, Cayley graphs, coset colorings — as live HTML, SVG, and shader-rendered PNG."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Steve Trettel" }]
keywords = ["coxeter", "hyperbolic", "tessellation", "visualization", "geometry"]
dependencies = []

[project.urls]
Homepage = "https://github.com/stevejtrettel/coxeter-viz"
Repository = "https://github.com/stevejtrettel/coxeter-viz"

[project.optional-dependencies]
export = ["playwright>=1.40"]

# Dev/test tooling (PEP 735). `uv sync` installs this by default; or
# `uv pip install -e ".[export]" --group dev` (the `[export]` extra brings
# Playwright, which the PNG/SVG/pixel tests drive headless).
[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/coxeter_groups"]

[tool.pytest.ini_options]
testpaths = ["tests"]
